# sleepytan

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
migrations/: 20220123194116_base.sql  20220201204305_board_descriptions.sql  20220326234012_handle_mypages.sql  20220327020002_post_dates.sql
sql/: boards.sql
src/: data.rs  db.rs  err.rs  main.rs  session.rs  templ.rs
src/handlers/: auth.rs  board.rs  handle.rs  index.rs  misc.rs  mod.rs  post.rs  thread.rs
static/: style.css
templates/: base.html  board.html  board_404.html  error.html  handle.html  handle_404.html  hello.html  huh.html  index.html  layout.html  login.html  macros.html  signup.html  thread.html  thread_404.html
