[package]
name = "sleepytan"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4.4"
tokio = { version = "1", features = ["full"] }
askama = "0.11"
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "sqlite"] }
tracing-subscriber = "0.3.6"
tracing = "0.1.29"
color-eyre = "0.6.0"
tower = "0.4.11"
